client/src/index.css
/* ... */
.home-tile-row {
	padding: 0;
}

.home-tile-row .container-fluid {
	padding: 0;
	display: block;
}

.home-tile-row .row {
	display: table;
	width: 100%;
	margin: 0;
}

.home-tile-row span.close-getting-started {
	position: relative;
	top: -10px;
	right: 5px;
	font-size: 1.2rem;
	float: right;
	cursor: pointer;
	opacity: .2;
	color: #000;
	text-shadow: 0 1px 0 #fff;
	font-weight: bold;
}

.home-tile-row span.close-getting-started:hover {
	opacity: .5;
	text-decoration: none;
}

button.home-tile.btn {
	display: table-cell;
	width: 20%;
	float: none;
	vertical-align: top;
	text-align: center;
	padding: 10px;
	color: #5c5c5c;
	text-decoration: none;
}
.home-tile h1 {
	font-weight: 900;
}

.home-tile:hover {
	background: #dae3ee;
}
.home-tile:hover, .home-tile:focus {
	text-decoration: none;
}

.person-icon, .position-icon {
	margin-right: 4px;
}

.primary-attendee .checkbox {
	padding: 0;
	margin: 0;
	text-align: center;
}

.loading .anet section {
	visibility: hidden;
}

.loading .anet section:before {
	content: "Loading...";
	visibility: visible;
	font-size: 2rem;
}

.nav img {
	width: 16px;
	margin-right: 6px;
}

.nav .nav > li > a {
	border-left: 4px solid rgba(0,0,0,0);
	padding: 4px 0 4px 38px;
	padding-right: 4px;
}

.nav .nav > li.active > a {
	border-left: 4px solid #1772B8;
}

li#search-nav .nav > li {
	border-left: none;
}

li#search-nav .nav > li a {
	padding-right: 4px;
}

.nav-overlay {
	margin-top: -125px;
	padding:8px;
	border: 1px solid #e0e0e0;
	height: 100%;
	position: absolute;
	background: #f2f2f2;
	left: 0;
	z-index: 9999;
	overflow-y:auto;
}

.report-sub-form .form-group {
	margin: 24px;
}

.report-sub-form textarea {
	width: 100%;
}

.report-sub-form .right-button {
	float: right;
	margin-right: 24px;
}

.report-sub-form button {
	margin-left: 24px;
}

.report-collection header {
	margin-bottom: 18px;
}

.report-collection footer {
	margin-top: 18px;
}

.report-summary {
	margin-top: 18px;
	padding-top: 18px;
	border-top: 1px solid #ccc;
}

.report-summary .row {
	margin-top: 3px;
}

.report-summary .engagement-date {
	margin-right: 10px;
	padding-left: 10px;
	padding-right: 10px;
}

.report-summary .people-separator {
	margin-left: 5px;
	color: #555;
	font-size: 1.4rem;
}

.report-summary h2 {
	font-size: 14px;
	font-weight: bold;
}

.not-found section.container {
	width: 100%;
	max-width: none;
	padding: 0;
	margin: 0;
}

.not-found .not-found-text {
	text-align: center;
}

.not-found .col-sm-3 {
	display: none;
}

.not-found .col-sm-9 {
	width: 100%;
}

.onboarding-new {
	width: 40%;
	margin-left: auto;
	margin-right: auto;
}

.onboarding-new h1, .onboarding-new p, .onboarding-new button {
	text-align: center;
}

.onboarding-new h1 {
	font-size: 24px;
	font-weight: bold;
	margin-bottom: 36px;
}

.onboarding-new p {
	font-size: 16px;
	margin-bottom: 24px;
}

.onboarding-new .help {
	margin-top: 36px;
}

.onboarding-new .help p {
	font-size: 12px;
	color: #999;
	margin-bottom: 0px;
}

.onboarding-new .create-account-button-wrapper {
	text-align: center;
}

.onboarding-new .role {
	text-transform: uppercase;
}

.getting-started-grid {
	padding-left: 0;
	padding-right: 0;
}

.getting-started-grid .row  {
	width: 100%;
	margin-left: auto;
	margin-right: auto;
	text-align: center;
}

.getting-started-grid .row:first-child {
	margin-bottom: 20px;
}

.getting-started-grid .row:last-child {
	margin-top: 20px;
}

.getting-started-grid .row h3,button {
	margin-top: 0;
	margin-bottom: 0;
}

.getting-started-grid .row h3 {
	font-size: 16px;
}

.getting-started-grid .row button {
	font-size: 12px;
}

.getting-started-grid {
	padding-top: 15px;
	padding-bottom: 15px;
}

.getting-started-grid a {
	font-weight: bold;
}

.getting-started-grid p {
	margin-bottom: 0;
}

table.borderless td {
	border: none !important;
}

table hr.attendee-divider {
	margin: 0px;
}

.report-cancelled {
	/*border-left: 1.5rem solid #DA9795;*/
	border-left: 1.5rem solid #C23030;
	padding-left: 1rem;
}

.report-rejected {
	border-left: 1.5rem solid #EB532D;
	padding-left: 1rem;
}

.report-draft {
	border-left: 1.5rem solid #f3a537;
	padding-left: 1rem;
}

.report-future {
	/*border-left: 1.5rem solid #238C2C; */
	border-left: 1.5rem solid #00998C;
	padding-left: 1rem;
}

.report-pending {
	border-left: 1.5rem solid #2965CC;
	padding-left: 1rem;
}

.report-form fieldset:last-child {
	margin-bottom: 10px;
}

.submit-buttons {
	display: flex;
	align-items: flex-end;
	margin: 5rem 0 5rem 0;
}

.submit-buttons > div {
	margin-left: 2.5rem;
}

.submit-buttons > div:first-child {
	flex-grow: 2;
	margin-left: 0;
}

.submit-buttons .btn-primary {
	font-weight: bold;
	height: 38px;
}

.report-form .report-details {
	width: 90%;
	margin-left: auto;
	margin-right: auto;
}

.report-form textarea {
	/* Without this, users can make the textarea arbitrarily wide,
		causing it to overlap with other elements and break the layout. */
	max-width: 100%;
}

.attendee-divider-row td {
	padding: 0 !important;
}

.attendee-divider-row hr {
	color: #5B616B;
	border-top: dashed;
	border-width: 2px;
	margin: 0;
}

.show-report-overview label.col-sm-2 {
	/* This clobbers the grid system but w/e. */
	width: 130px;
}

/* Specific styling for report tags in edit mode */
.reportTag {
	margin-right: 0.5em;
}
.reportTag::before {
	content: "#";
}
.reportTagRemove {
	margin-left: 0.25em;
	color: white;
    cursor: pointer;
}
.reportTagRemove, .reportTagRemove:hover {
    text-decoration: none;
}
.reportTag.label {
	display: inline-block;
	font-size: 80%;
	line-height: inherit;
}

.form-control-static {
	/* The design calls for 18px of separation between static form rows.
		The form row already has padding-top: 7px and padding-bottom: 7px,
		and the form control has margin-bottom: 15px. 15 + x = 18 - (7 + 7); x = -11
	*/
	margin-bottom: -11px;
}

.no-position-warning {
	text-align: center;
}

hr.assignModalSplit {
	border-bottom: 1px solid #555;
}

.help-page .help-text {
	font-size: 2rem;
}

.help-page h4 {
	margin-top: 5rem;
}
/* ... */

